# training_tests

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: main_fokusmanager.yml
app/: admin.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_task_image_alter_task_description.py  0003_alter_task_category.py
app/templates/: categories.html  home.html  task_detail.html  tasks.html
app/tests/: test_app_model_category.py  test_app_model_task.py  test_base_app.py  tests_app_urls.py  tests_app_views.py
authors/: forms.py  models.py  urls.py  views.py
authors/migrations/: 0001_initial.py
authors/tests/: test_authors_urls.py  test_authors_views.py  test_base_authors.py
project/: logging.py  settings.py  urls.py
tasks/: forms.py  models.py  urls.py  views.py
tasks/decorators/: decorator.py
tasks/migrations/: 0001_initial.py  0002_alter_category_slug_alter_category_unique_together_and_more.py  0002_alter_category_slug_alter_task_slug.py  0002_category_slug.py  0003_alter_task_slug.py  0003_task_slug.py  0004_category_created_at_task_created_at.py
tasks/templates/: categories.html  create_category.html  create_task.html  dashboard.html  home.html  task_detail.html  tasks.html  update_category.html  update_task.html
tasks/tests/: test_base_tasks.py  test_tasks_model_category.py  test_tasks_model_task.py  tests_tasks_urls.py  tests_tasks_views.py
tasks/views/: all.py  (+4 more)
templates/: 404.html  500.html
utils/: browser.py  functions.py
(+38 files in other folders)
