[project]
name = "training-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "coverage>=7.13.2",
    "django>=6.0.1",
    "parameterized>=0.9.0",
    "pillow>=12.1.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "python-decouple>=3.8",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
